--- a/www/flymine/site/about.html
+++ b/www/flymine/site/about.html
@@ -81,7 +81,7 @@
 
 <p style="">
       <a href="http://www.wellcome.ac.uk" target="_new">
-            <img title="FlyMine is funded by the Wellcome Trust" class="inlinegraphic" src="../images/wellcome_logo.png" />
+            <img title="FlyMine is funded by the Wellcome Trust" class="inlinegraphic" src="../images/wellcome_logo.png" alt="Wellcome"/>
       </a>
     </p>
 <p style="">
