added logo page
Former-commit-id: 78cf41e14bf5e8f4f88979dfd76d2a47408d906d

--- a/www/flymine/site/link.html
+++ b/www/flymine/site/link.html
@@ -30,7 +30,9 @@
     <li><strong>orthologue</strong>: <strong>shortName</strong> of the organism to get the orthologues from</li>
 </ul>
 (*mandatory field)
-</p><br/><br/>
+</p>
+<p>You can find some logos to link to FlyMine <a href="logos.shtml" title="FlyMine logos">here</a>.</p>
+<br/><br/>
 
 <h2>Examples</h2>
 
